# Group-6-CLI-Coding-Assistant

./: .gitignore  README.md  axiom.bat  axiom.ps1  requirements.txt
SpecificationFiles/: 00_README_FOR_TEAM.md  01_project_scope_and_requirements.md  02_system_architecture.md  03_repo_structure.md  04_state_diagram.md  06_module_specs_cli.md  07_module_specs_agent_loop.md  08_module_specs_provider_abstraction.md  09_module_specs_mcp_client.md  10_module_specs_rag_server.md  11_integration_plan_and_task_split.md  12_definition_of_done.md
coding-assistant/: README.md  main.py  pyproject.toml  requirements.txt  setup_calculator_app.py
coding-assistant/calculator_app/: calculator.py
coding-assistant/rag_server/: chunking.py  config.py  embeddings.py  ingest.py  retrieval.py  server.py  vectordb.py
coding-assistant/rag_server/data/chroma/: chroma.sqlite3
coding-assistant/rag_server/data/raw/: 04_state_diagram.md  05_sequence_diagrams.md  12_definition_of_done.md
coding-assistant/src/assistant/: __init__.py  config.py  main.py
coding-assistant/src/assistant/agent/: __init__.py  loop.py  message_builder.py  planner.py  state.py
coding-assistant/src/assistant/cli/: __init__.py  app.py  prompts.py  renderer.py
coding-assistant/src/assistant/mcp/: __init__.py  adapters.py  client.py  mcp_client.py  mock_client.py  server_config.py
coding-assistant/src/assistant/providers/: __init__.py  base.py  dummy_provider.py  litellm_client.py
coding-assistant/src/assistant/tools/: __init__.py  approval.py  executor.py  registry.py
