[project]
name = "coding-assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "langgraph>=1.1.3",
    "litellm>=1.82.6",
    "mcp>=1.26.0",
    "nest-asyncio>=1.6.0",
    "rich>=13.0.0",
    "sentence-transformers>=5.3.0",
]

[project.scripts]
assistant = "assistant.main:main"
